@@ -114,6 +114,365 @@
         </value>
       </value>
     </configProperty>
+    <configProperty>
+      <name>my_short_sequence</name>
+      <value>
+        <type>
+          <kind>tk_sequence</kind>
+          <sequence>
+            <elementType>
+              <kind>tk_short</kind>
+            </elementType>
+          </sequence>
+        </type>
+        <value>
+          <element>
+            <short>11</short>
+          </element>
+          <element>
+            <short>12</short>
+          </element>
+          <element>
+            <short>13</short>
+          </element>
+        </value>
+      </value>
+    </configProperty>
+    <configProperty>
+      <name>my_long_sequence</name>
+      <value>
+        <type>
+          <kind>tk_sequence</kind>
+          <sequence>
+            <elementType>
+              <kind>tk_long</kind>
+            </elementType>
+          </sequence>
+        </type>
+        <value>
+          <element>
+            <long>21</long>
+          </element>
+          <element>
+            <long>22</long>
+          </element>
+          <element>
+            <long>23</long>
+          </element>
+        </value>
+      </value>
+    </configProperty>
+    <configProperty>
+      <name>my_float_sequence</name>
+      <value>
+        <type>
+          <kind>tk_sequence</kind>
+          <sequence>
+            <elementType>
+              <kind>tk_float</kind>
+            </elementType>
+          </sequence>
+        </type>
+        <value>
+          <element>
+            <float>21.12</float>
+          </element>
+          <element>
+            <float>22.22</float>
+          </element>
+          <element>
+            <float>23.32</float>
+          </element>
+        </value>
+      </value>
+    </configProperty>
+    <configProperty>
+      <name>my_double_sequence</name>
+      <value>
+        <type>
+          <kind>tk_sequence</kind>
+          <sequence>
+            <elementType>
+              <kind>tk_double</kind>
+            </elementType>
+          </sequence>
+        </type>
+        <value>
+          <element>
+            <double>621.12</double>
+          </element>
+          <element>
+            <double>622.22</double>
+          </element>
+          <element>
+            <double>623.32</double>
+          </element>
+        </value>
+      </value>
+    </configProperty>
+    <configProperty>
+      <name>my_bar_struct</name>
+      <value>
+        <type>
+          <kind>tk_struct</kind>
+          <struct>
+            <name>Bar</name>
+            <typeId>IDL:Bar:1.0</typeId>
+            <member>
+              <name>s</name>
+              <type>
+                <kind>tk_short</kind>
+              </type>
+            </member>
+            <member>
+              <name>l</name>
+              <type>
+                <kind>tk_long</kind>
+              </type>
+            </member>
+            <member>
+              <name>f</name>
+              <type>
+                <kind>tk_float</kind>
+              </type>
+            </member>
+            <member>
+              <name>d</name>
+              <type>
+                <kind>tk_double</kind>
+              </type>
+            </member>
+          </struct>
+        </type>
+        <value>
+          <member>
+            <name>s</name>
+            <value>
+              <short>3</short>
+            </value>
+          </member>
+          <member>
+            <name>l</name>
+            <value>
+              <long>4</long>
+            </value>
+          </member>
+          <member>
+            <name>f</name>
+            <value>
+              <float>5.6</float>
+            </value>
+          </member>
+          <member>
+            <name>d</name>
+            <value>
+              <double>7.8</double>
+            </value>
+          </member>
+        </value>
+      </value>
+    </configProperty>
+    <configProperty>
+      <name>my_bar_struct</name>
+      <value>
+        <type>
+          <kind>tk_struct</kind>
+          <struct>
+            <name>Baz</name>
+            <typeId>IDL:Baz:1.0</typeId>
+            <member>
+              <name>name</name>
+              <type>
+                <kind>tk_string</kind>
+              </type>
+            </member>
+            <member>
+              <name>my_bar_sequence</name>
+              <type>
+                <kind>tk_sequence</kind>
+                <sequence>
+                  <bound>5</bound>
+                  <elementType>
+                    <kind>tk_struct</kind>
+                    <struct>
+                      <name>Bar</name>
+                      <typeId>IDL:Bar:1.0</typeId>
+                      <member>
+                        <name>s</name>
+                        <type>
+                          <kind>tk_short</kind>
+                        </type>
+                      </member>
+                      <member>
+                        <name>l</name>
+                        <type>
+                          <kind>tk_long</kind>
+                        </type>
+                      </member>
+                      <member>
+                        <name>f</name>
+                        <type>
+                          <kind>tk_float</kind>
+                        </type>
+                      </member>
+                      <member>
+                        <name>d</name>
+                        <type>
+                          <kind>tk_double</kind>
+                        </type>
+                      </member>
+                    </struct>
+                  </elementType>
+                </sequence>
+              </type>
+            </member>
+          </struct>
+        </type>
+        <value>
+          <member>
+            <name>name</name>
+            <value>
+              <string>My Baz Struct</string>
+            </value>
+          </member>
+          <member>
+            <name>my_bar_sequence</name>
+            <value>
+              <element>
+                <member>
+                  <name>s</name>
+                  <value>
+                    <short>3</short>
+                  </value>
+                </member>
+                <member>
+                  <name>l</name>
+                  <value>
+                    <long>4</long>
+                  </value>
+                </member>
+                <member>
+                  <name>f</name>
+                  <value>
+                    <float>5.6</float>
+                  </value>
+                </member>
+                <member>
+                  <name>d</name>
+                  <value>
+                    <double>7.8</double>
+                  </value>
+                </member>
+              </element>
+              <element>
+                <member>
+                  <name>s</name>
+                  <value>
+                    <short>13</short>
+                  </value>
+                </member>
+                <member>
+                  <name>l</name>
+                  <value>
+                    <long>14</long>
+                  </value>
+                </member>
+                <member>
+                  <name>f</name>
+                  <value>
+                    <float>15.6</float>
+                  </value>
+                </member>
+                <member>
+                  <name>d</name>
+                  <value>
+                    <double>17.8</double>
+                  </value>
+                </member>
+              </element>
+              <element>
+                <member>
+                  <name>s</name>
+                  <value>
+                    <short>23</short>
+                  </value>
+                </member>
+                <member>
+                  <name>l</name>
+                  <value>
+                    <long>24</long>
+                  </value>
+                </member>
+                <member>
+                  <name>f</name>
+                  <value>
+                    <float>25.6</float>
+                  </value>
+                </member>
+                <member>
+                  <name>d</name>
+                  <value>
+                    <double>27.8</double>
+                  </value>
+                </member>
+              </element>
+              <element>
+                <member>
+                  <name>s</name>
+                  <value>
+                    <short>33</short>
+                  </value>
+                </member>
+                <member>
+                  <name>l</name>
+                  <value>
+                    <long>34</long>
+                  </value>
+                </member>
+                <member>
+                  <name>f</name>
+                  <value>
+                    <float>35.6</float>
+                  </value>
+                </member>
+                <member>
+                  <name>d</name>
+                  <value>
+                    <double>37.8</double>
+                  </value>
+                </member>
+              </element>
+              <element>
+                <member>
+                  <name>s</name>
+                  <value>
+                    <short>43</short>
+                  </value>
+                </member>
+                <member>
+                  <name>l</name>
+                  <value>
+                    <long>44</long>
+                  </value>
+                </member>
+                <member>
+                  <name>f</name>
+                  <value>
+                    <float>45.6</float>
+                  </value>
+                </member>
+                <member>
+                  <name>d</name>
+                  <value>
+                    <double>47.8</double>
+                  </value>
+                </member>
+              </element>
+            </value>
+          </member>
+        </value>
+      </value>
+    </configProperty>
   </instance>
 
   <artifact xmi:id="_669DBD2E-E130-11DE-B472-00242C889DAA">
